--- a/.gitconfig
+++ b/.gitconfig
@@ -8,6 +8,7 @@
 	ff = pull --ff-only
 	ds = diff --staged
 	d = diff
+	c = commit
 
 # References
 # 1. https://github.com/mathiasbynens/dotfiles/blob/main/.gitconfig
