--- a/.gitconfig
+++ b/.gitconfig
@@ -8,7 +8,7 @@
 	lq = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(bold white)— %an%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
 	find = log --pretty=\"format:%Cgreen%H %Cblue%s\" --name-status --grep
 	ff = pull --ff-only
-	pr = pull -r --autosquash
+	pr = pull -r --autostash
 	c = commit
 	# `git dft` is less to type than `git difftool`.
 	dft = difftool
