chore(gitconfig): update git aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,19 +4,21 @@
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 	lq = log --graph --all --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(bold white)— %an%C(reset)%C(bold yellow)%d%C(reset)' --abbrev-commit --date=relative
-	ds = diff --staged
+
+	c = commit
+	cf = commit --fixup
+
   find = log --pretty=\"format:%Cgreen%H %Cblue%s\" --name-status --grep
 	ff = pull --ff-only
 	pr = pull -r --autostash
-	c = commit
 
-
+	d = diff
+	ds = diff --staged
 	# `git dlog` to show `git log -p` with difftastic.
 	# dlog = "-c diff.external=difft log -p --ext-diff"
 	# `git dft` is less to type than `git difftool`.
 	# dft = difftool
 
-	# d = diff
 
 # [diff]
 # 	external = difft
