--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,8 @@
 	ff = pull --ff-only
 	pr = pull -r --autostash
 
+	picknc = cherry-pick --no-commit
+
 	d = diff
 	ds = diff --staged
 	# `git dlog` to show `git log -p` with difftastic.
